--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "flexpes-nexafs"
-version = "1.9.5"
+version = "1.9.5.post1"
 description = "FlexPES NEXAFS Plotter: PyQt GUI to browse, process and visualize HDF5 data."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -21,3 +21,6 @@ package-dir = {"" = "src"}
 [tool.setuptools.packages.find]
 where = ["src"]
 include = ["flexpes_nexafs*"]
+
+[tool.setuptools.package-data]
+flexpes_nexafs = ["docs/*.md"]
