--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "flexpes-nexafs"
-version = "1.9.9"
+version = "2.0.0"
 description = "FlexPES NEXAFS Plotter: PyQt GUI to browse, process and visualize HDF5 data."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -23,4 +23,4 @@ where = ["src"]
 include = ["flexpes_nexafs*"]
 
 [tool.setuptools.package-data]
-flexpes_nexafs = ["docs/*.md", "library.h5"]
+flexpes_nexafs = ["docs/*.md", "library.h5", "example_data/*"]
