--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "flexpes-nexafs"
-version = "2.2.0"
+version = "2.2.0.post1"
 description = "FlexPES NEXAFS Plotter: PyQt GUI to browse, process and visualize HDF5 data."
 readme = "README.md"
 requires-python = ">=3.9"
 license = { text = "MIT" }
 authors = [{ name = "Alexei Preobrajenski" }]
-dependencies = ["PyQt5>=5.15", "matplotlib>=3.7", "numpy>=1.23", "h5py>=3.8"]
+dependencies = ["PyQt5>=5.15", "matplotlib>=3.7", "numpy>=1.23", "h5py>=3.8", "markdown>=3.4"]
 
 [project.scripts]
 flexpes-nexafs = "flexpes_nexafs.app:main"
