--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "flexpes-nexafs"
-version = "2.3.0"
+version = "2.3.1"
 description = "FlexPES NEXAFS Plotter: PyQt GUI to browse, process and visualize HDF5 data."
 readme = "README.md"
 requires-python = ">=3.9"
@@ -14,6 +14,7 @@ dependencies = [
   "PyQt5>=5.15",
   "matplotlib>=3.7",
   "numpy>=1.23",
+  "scipy>=1.10",
   "h5py>=3.8",
   "markdown>=3.4",
   "pandas>=2.0",
